--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,7 @@ h6 {
   font-weight: 600;
   font-size: 14px;
   outline: none;
+  text-shadow: 1px 1px 2px black;
 }
 
 .nav-menu .menu-active a,
@@ -514,6 +515,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 56px;
   font-weight: 600;
   text-transform: uppercase;
+  text-shadow: 1px 1px 2px black;
 }
 
 #intro h1 span {
